<resources>
    <string name="app_name">Project0</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>

    <string name="toast_popular_movies">This button will launch my popular movies app!</string>
    <string name="toast_stock_hawk">This button will launch my stock hawk app!</string>
    <string name="toast_buildit_bigger">This button will launch my build it bigger app!</string>
    <string name="toast_app_material">This button will launch my make your app material app!</string>
    <string name="toast_go_ubiquitous">This button will launch my go ubiquitous app!</string>
    <string name="toast_capstone">This button will launch my capstone app!</string>

    <string-array name="projects_array">
        <item>popular movies</item>
        <item>stock hawk</item>
        <item>build it bigger</item>
        <item>make your app material</item>
        <item>go ubiquitous</item>
        <item>capstone</item>
    </string-array>
</resources>
